AB#128438 Upgrade to Spring Boot 3.5